--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ body {
     font-size: 1.5rem;
 }
 
-.output .previous-current {
+.output .current-operand {
     color: white;
-    font-size. 2.5rem;
+    font-size: 2.5rem;
 }
